--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ php:
 
 before_script:
   - wget http://getcomposer.org/composer.phar
-  - php composer.phar install
+  - php composer.phar require satooshi/php-coveralls:dev-master --dev --no-progress --prefer-source
 
-script: phpunit --configuration phpunit.xml
+script:
+  - mkdir -p build/logs
+  - phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - php vendor/bin/coveralls -v
