--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,7 @@ php:
   - hhvm
 
 before_script:
-  - wget http://getcomposer.org/composer.phar
-  - php composer.phar require satooshi/php-coveralls:dev-master --dev --no-progress --prefer-source
+  - composer install --no-progress
 
 script:
-  - mkdir -p build/logs
-  - phpunit --coverage-clover build/logs/clover.xml
-
-after_script:
-  - php vendor/bin/coveralls -v
+  - phpunit
