--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         }
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.4.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8"
     }
 }
