--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,4 +11,9 @@
         </testsuite>
     </testsuites>
 
+  <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">src</directory>
+        </whitelist>
+    </filter>
 </phpunit>
