--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
 language: php
 
+dist: xenial
+
 php:
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
 
 matrix:
   fast_finish: true
+  include:
+    - php: 5.4
+      dist: trusty
+    - php: 5.5
+      dist: trusty
   allow_failures:
     - php: nightly
 
